[package]
name = "sparsey"
version = "0.12.1"
edition = "2021"
description = "Sparse set-based entity component system"
authors = ["Tudor-Cristian Lechințan <lechintantudor02@gmail.com>"]
repository = "https://github.com/LechintanTudor/sparsey"
keywords = ["component", "ecs", "entity", "gamedev", "system"]
categories = ["data-structures", "game-development"]
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
atomic_refcell = "0.1.13"
rustc-hash = { version = "2.0", default-features = false }

[dependencies.hashbrown]
version = "0.14"
default-features = false
features = ["inline-more"]

[lints.rust]
# missing-docs = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast-possible-truncation = "allow"
missing-errors-doc = "allow"
missing-panics-doc = "allow"
missing-safety_doc = "allow"
module-name-repetitions = "allow"
wildcard-imports = "allow"
